style.css
ul.project-list > dl,
ul.category-list > li
{
	padding-right : 15px;
}
ul.project-list > dl:hover,
ul.project-list > dl.active,
ul.category-list > li:hover,
ul.category-list > li.active
{
	box-shadow: 2px 0px 0 0 black;
	color : black !important;
}
ul.project-list > dl:not(.active),
ul.category-list > li:not(.active)
{
	color : #ccc;
}
.padding{
	padding : 10px;
}
.animation-fade-in-from-bottom {
  -webkit-animation-fill-mode: backwards;
  -webkit-animation-duration: 300ms;
  -webkit-animation-name: fade-in-from-bottom;
}
@keyframes fade-in-from-bottom {
  0% {
    -webkit-transform: translate3d(0,20px,0);
    opacity: 0;
  }
  100% {
    -webkit-transform: translate3d(0,0,0);
    opacity: 1;
  }
}
.animation-fade-in {
  -webkit-animation-fill-mode: backwards;
  -webkit-animation-duration: 300ms;
  -webkit-animation-name: fade-in-from-bottom;
}
@keyframes fade-in-from-bottom {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
.invisible{
  visibility: 0;
}

